# drones-287

./: .gitignore  .gitmodules  README.md  fucking_serial.py
code/: drone.launch
code/debugger/: CMakeLists.txt  Debugger.cpp  package.xml
code/lander/: CMakeLists.txt  Controller.cpp  Controller.h  Lander.cpp  LanderStates.cpp  LanderStates.h  QuadcopterState.cpp  QuadcopterState.h  TestListener.cpp  TestPublisher.cpp  package.xml
code/pose_estimator/: CMakeLists.txt  Corners.cpp  Corners.h  DemoPoseFromImages.cpp  Geometry.cpp  PoseEstimator.cpp  TestCornersFromCamera.cpp  TestCornersFromImages.cpp  TestGeometry.cpp  TestPoseFromCamera.cpp  TestPoseFromImages.cpp  package.xml
code/pose_estimator_fast/: .gitignore  CMakeLists.txt  Corners.cpp  Geometry.cpp
code/roscopter_controller/: README.md
code/roscopter_pose_estimator/: CMakeLists.txt  Corners.cpp  Corners.h  Geometry.cpp  PoseEstimator.cpp  TestCornersFromCamera.cpp  TestPoseFromCamera.cpp  TestPoseFromImages.cpp
cv-proposal/section/: goals.tex
misc/: .gitignore  Makefile  configure_webcam.py  field_of_view.py
misc/CaptureFPS/: CaptureFPS.cpp
misc/CaptureOneFrame/: CMakeLists.txt  CaptureOneFrame.cpp
misc/TryExposures/: CMakeLists.txt  TryExposures.cpp
misc/camera_calibration/: CMakeLists.txt  in_logitech.xml  out_logitech.xml-1  out_logitech.xml-2  out_logitech.xml-3
misc/camera_exposure/: fix_exposure.py  try_exposures.py
misc/pose_est_accu/: plot_vision_data.py
misc/pose_est_accu/088cm/: data-barometer  data-vision
misc/pose_est_accu/120cm/: data-barometer  data-vision
misc/pose_est_accu/170cm/: data-barometer  data-vision
misc/pose_est_accu/226cm/: data-barometer  data-vision
misc/pose_estimator_fast/: Geometry.h  PoseEstimator.cpp  package.xml
misc/python_node/: CMakeLists.txt  package.xml
notes/: beaglebone-installing-opencv  beaglebone-installing-ros  beaglebone-installing-ubuntu  beaglebone-usb-hub  beaglebone-webcam  beaglebone-wifi  building-roscopter  camera-field-of-view.txt  controlling-apm  debugging  misc  roscopter.patch  testing-rtl  vm-setup
presentations/robotics-presentation/: index.html
presentations/robotics-presentation/css/: custom.css
presentations/robotics-presentation/images/.picasaoriginals/: .picasa.ini
presentations/vision-presentation/: index.html
presentations/vision-presentation/css/: custom.css
presentations/vision-presentation/images/: .picasa.ini
proposal/: .gitignore  Makefile  proposal.tex
proposal/bib/: proposal.bib
proposal/section/: description.tex  goals.tex
robotics-milestone/: milestone.tex  results.txt  results.xlsx
roscopter_controller/: package.xml
roscopter_lander/: CMakeLists.txt  README.md  package.xml
roscopter_pose_estimator/: CMakeLists.txt  package.xml
vision-code/CaptureFPS/: CMakeLists.txt  CaptureFPS.cpp
vision-code/CornerDetection/: CMakeLists.txt  CornerDetection.cpp  CornerDetectionFromImages.cpp
vision-code/DisplayImage/: DisplayImage.cpp
vision-code/PoseEstimator/: CMakeLists.txt  Geometry.cpp  Geometry.h  PoseEstimator.cpp  TestGeometry.cpp
vision-code/WebCamUsingOpenCV/: .gitignore  ReadMe.txt  WebCamUsingOpenCV.cpp  WebCamUsingOpenCV.sln  WebCamUsingOpenCV.vcxproj  WebCamUsingOpenCV.vcxproj.filters  stdafx.cpp
vision-proposal/: Makefile  proposal.tex
vision-proposal/section/: description.tex  goals.tex
writeups/diagrams/: ROS Nodes.vsdx  State Diagram.vsdx
writeups/robotics-milestone/: .gitignore  Makefile  milestone.tex
writeups/robotics-proposal/section/: description.tex  motivation.tex
writeups/robotics-report/: .gitignore  Makefile  report.bib  report.tex
writeups/vision-proposal/section/: description.tex
writeups/vision-report/: Makefile.osx  report.tex
