<?xml version="1.0"?>
<package>
  <name>roscopter_lander</name>
  <version>0.0.0</version>
  <description>ROS pose estimation using OpenCV for automated landing.</description>

  <maintainer email="cberzan@gmail.com">cberzan</maintainer>
   <maintainer email="git@ss21k.co.uk">ssk2</maintainer>
   <maintainer email="nahush.nnb@gmail.com">nbhanage</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscopter</build_depend>
  <run_depend>roscopter</run_depend>

</package>